<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:hint="@string/select_date"
        android:clickable="true"
        android:focusable="false"
        />



    <EditText
        android:id="@+id/letter_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginTop="94dp"
        android:hint="@string/letter_no" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginTop="175dp"
        android:hint="@string/subject" />

    <Spinner
        android:id="@+id/spinner_select_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginBottom="220dp"
        android:entries="@array/select_type_array"
        android:prompt="@string/select_type_hint" />

    <Spinner
        android:id="@+id/spinner_select_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginBottom="150dp"
        android:entries="@array/select_type_array"
        android:prompt="@string/select_department_hint" />

    <Button
        android:id="@+id/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginBottom="50dp"
        android:text="@string/browse" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/browse"
        android:layout_marginEnd="14dp"
        android:text="@string/upload" />


</RelativeLayout>